# Notepad

./: .gitignore  CMakeLists.txt  Doxyfile  Info.plist.in  PACKAGING.md  README.md  canvasview.cpp  canvasview.h  findbar.cpp  findbar.h  fontlibrary.h  iconfactory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagedocumentitem.cpp  pagedocumentitem.h  pagesetupdialog.cpp  pagesetupdialog.h  pagetextedit.cpp  pagetextedit.h  rulerwidget.cpp  rulerwidget.h  winregister.cpp
.github/workflows/: release.yml
assets/: notepad_icon.icns
docs/: Architecture.md  To Do.txt  improvements.txt
linux/: note-thumbnailer.cpp  notepad-note.xml  notepad.desktop  notepad.thumbnailer
mac/: NoteParser.h  NoteParser.m
mac/PreviewExtension/: Info.plist  PreviewProvider.h  PreviewProvider.m
mac/ThumbnailExtension/: Info.plist  ThumbnailProvider.m
src/: Notepad_en_IN.ts  canvasview.h  codehighlighter.cpp  codehighlighter.h  documenttabbar.cpp  documenttabbar.h  documentview.cpp  documentview.h  findbar.cpp  findbar.h  fontcombo.cpp  fontcombo.h  fontlibrary.cpp  iconfactory.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagedocumentitem.cpp  pagesetupdialog.cpp  pagesetupdialog.h  singleinstance.cpp  singleinstance.h  winregister.h
windows/: NoteThumbnailProvider.cpp  NoteThumbnailProvider.def  notepad.rc
